--- a/templates/index.html
+++ b/templates/index.html
@@ -28,28 +28,25 @@
                 },
                 options: {
                     scales: {
-                        xAxes: [{
+                        x: {
                             type: 'time',
                             time: {
                                 unit: 'second',
                                 tooltipFormat: 'HH:mm:ss'
                             },
-                            scaleLabel: {
+                            title: {
                                 display: true,
-                                labelString: 'Time'
+                                text: 'Time'
                             }
-                        }],
-                        yAxes: [{
-                            ticks: {
-                                beginAtZero: true,
-                                steps: 1,
-                                max: 1
-                            },
-                            scaleLabel: {
+                        },
+                        y: {
+                            beginAtZero: true,
+                            max: 1,
+                            title: {
                                 display: true,
-                                labelString: 'Proximity (1=Detected, 0=Not Detected)'
+                                text: 'Proximity (1=Detected, 0=Not Detected)'
                             }
-                        }]
+                        }
                     }
                 }
             });
